# agent_ops

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Description.md  README.md  README.update.md  pyproject.toml  ruff.toml  sample_feature_1.py  sample_feature_2.py  sample_feature_3.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  alerts.py  benchmarks.py  evals.py  metrics.py  projects.py  security.py  traces.py
backend/app/core/: config.py  database.py  middleware.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: alerts.py  ingest.py  metrics.py  task_queue.py
benchmarks/presets/: models.yaml
benchmarks/providers/: registry.py
docs/: README.zh-CN.md  advanced_usage.md  usage_guide.md
evals/datasets/: rag_qa.yaml
evals/suites/: regression.yaml  smoke.yaml
examples/demo-agent/: .agent-ops.yaml  getting-started.md
examples/demo-agent/app/: agent.py
examples/demo-agent/evals/: smoke.yaml
infra/: Dockerfile.backend  Dockerfile.web  Dockerfile.worker  docker-compose.yml
security/policies/: default.yaml
security/scanners/: agent_scanner.py
security/test_cases/: prompt_injection.yaml
tests/: test_basic.py  test_project_loader.py  test_sdk.py  test_security.py
utils/: logger.py
web/: next.config.js  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/alerts/: page.tsx
web/app/benchmarks/: page.tsx
web/app/evals/: page.tsx
web/app/metrics/: page.tsx
web/app/projects/: page.tsx
web/app/security/: page.tsx
web/app/traces/: page.tsx
web/app/traces/[id]/: page.tsx
web/components/: layout.tsx
web/lib/: api.ts  hooks.ts  query-provider.tsx
worker/: main.py  pyproject.toml
worker/tasks/: __init__.py
