[project]
name = "agent-ops"
version = "0.1.0"
description = "AgentOps - Intelligent Agent Operations Platform"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/agent-ops-sdk",
    "packages/agent-ops-cli",
    "backend",
    "worker",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
