[project]
name = "agent-ops"
version = "0.1.0"
description = "AgentOps - Intelligent Agent Operations Platform"
readme = "README.md"
authors = [
    {name = "AgentOps Team", email = "team@agentops.ai"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/agent-ops-sdk",
    "packages/agent-ops-cli",
    "backend",
    "worker",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "pre-commit>=3.7",
]
