[project]
name = "agent-ops-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "arq>=0.26",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "agent-ops-sdk",
    "agent-ops-cli",
    "agent-ops-backend",
]

[tool.uv.sources]
agent-ops-sdk = { workspace = true }
agent-ops-cli = { workspace = true }
agent-ops-backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
